--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -23,8 +23,8 @@ jobs:
       - name: Azure CLI script
         uses: azure/CLI@v1
         with:
-          azcliversion: 2.21.0
+          azcliversion: 2.30.0
           inlineScript: |
             az version
-            az account set -s 996a2f3f-ee01-4ffd-9765-d2c3fc98f30a
-            az deployment sub what-if -f main.bicep -l westus
+            az account set -s a1bfa635-f2bf-42f1-86b5-848c674fc321
+            az bicep build -f main.bicep
