--- a/.github/workflows/jobs.yaml
+++ b/.github/workflows/jobs.yaml
@@ -25,6 +25,7 @@ jobs:
         with:
           azcliversion: 2.30.0
           inlineScript: |
+            az login
             az version
             az account set -s a1bfa635-f2bf-42f1-86b5-848c674fc321
             az bicep build -f main.bicep
